# agentskill

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tri-engine-ci.yml
awesome-opencode/: package-lock.json  package.json
awesome-opencode/.github/: PULL_REQUEST_TEMPLATE.md
awesome-opencode/.github/workflows/: generate-readme.yml  validate-pr.yml
awesome-opencode/scripts/: generate-readme.js
awesome-opencode/scripts/utils/: validation.js  yaml.js
backend/agentman/: MANIFEST.in  README.md  pyproject.toml
backend/agentman/examples/agno-example/: Agentfile
backend/agentman/examples/agno-ollama/: Agentfile
backend/agentman/examples/agno-team-example/: Agentfile
backend/agentman/examples/chain-aliyun/: Agentfile
backend/agentman/examples/github-maintainer/: Agentfile
backend/agentman/examples/github-profile-manager/: Agentfile
backend/agentman/src/agentman/: __init__.py  agent_builder.py  agent_registry.py  agentfile_parser.py  cli.py  schema_registry.py  strict_executor.py
backend/agentman/src/agentman/frameworks/: __init__.py  base.py  fast_agent.py
backend/agentman/src/agentman/schemas/: artifact_schema.json  task_schema.json
backend/agentman/tests/: test_agent_builder.py  test_agentfile_parser.py  test_cli.py  test_dockerfile_generation.py  test_framework_support.py  test_prompt_txt_support.py  test_strict_executor.py
ci_cd/: validate_docs.sh  validate_workspace.sh
codex-develop/: stop-develop.sh
docs/: architecture.md  ci_cd.md  security.md  setup.md  testing.md
docs/awesome-opencode/: .gitignore  contributing.md  package-lock.json  package.json
docs/awesome-opencode/docs/: schema-design.md
docs/awesome-opencode/scripts/: export-json.js  validate.js
docs/awesome-opencode/scripts/utils/: template.js  validation.js
frontend/open-antigravity/: CONTRIBUTING.md  README.md
frontend/open-antigravity/mitmserver/: server.js
infra/codex-develop/: common.sh  down-develop.sh  gitUpdate.sh  rebuild-develop.sh  start-develop.sh  stop-develop.sh
open-antigravity/: README.md  README.zh-CN.md
open-antigravity/mitmserver/: README.md
opencode-antigravity-auth/: README.md
opencode-antigravity-auth/scripts/: check-quota.mjs
opencode-antigravity-auth/src/: constants.ts
opencode-antigravity-auth/src/antigravity/: oauth.ts
opencode-antigravity-auth/src/plugin/: token.ts
security/: audit-node.sh  audit-python.sh  scan-secrets.sh
system/: migration-map.md  repo-map.md
system/tri-engine/: Agentfile  prompt.txt  stages.yaml
tests/: test_repo_integrity.py
