[project]
name = "agentman-mcp"
version = "0.1.6"
description = "A deterministic Agentfile parser and generator"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Xiaodong Ye", email = "yeahdongcn@gmail.com" },
]
maintainers = [
    { name = "Xiaodong Ye", email = "yeahdongcn@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML==6.0.2",
]
keywords = ["ai", "agents", "mcp", "model-context-protocol", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/fallofpheonix/agentskill"
Documentation = "https://github.com/fallofpheonix/agentskill/tree/main/backend/agentman"
Repository = "https://github.com/fallofpheonix/agentskill.git"
Issues = "https://github.com/fallofpheonix/agentskill/issues"

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "pip-audit==2.9.0",
    "pytest==8.4.1",
    "pytest-cov==7.0.0",
]

[project.scripts]
agentman = "agentman.cli:main"

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src/agentman"]
omit = [
    "tests/*",
    "src/agentman/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
